--- a/views/searchResultsAustin.ejs
+++ b/views/searchResultsAustin.ejs
@@ -5,7 +5,7 @@
      <!-- SLICK SLIDER CSS -->
     <link rel='stylesheet' href='/stylesheets/slickSlider.css' />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
-     <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+     <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     
 
@@ -35,7 +35,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="tel:5122709688">512-270-9688</a></li>
         <li><% cookies.forEach(function(cookie) { %>
-        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
+        <% if (!cookie) { %><a href="/signin">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -65,31 +65,15 @@
         
 </div>
 <% }) %>  
+<div class='col-md-12 col-xs-12'>
+  <small>Based on information from the Austin Board of REALTORS® (alternatively, from ACTRIS) All information provided is deemed reliable but is not guaranteed and should be independently verified. The Austin Board of REALTORS®, ACTRIS and their affiliates provide the MLS and all content therein “AS IS” and without any warranty, express or implied.</small>
+</div>
+
 </div>
 </div>
 
 
-    <div class='row footerMargin'>
-    </div>
 
-     <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="margin visible-lg visible-md"></div>
-                        <small>Powered by VRG - <a href="#" id="disclaimer" target="_blank">Disclaimer</a></small>
-                    </div>
-                    <div class="col-md-6 text-right visible-lg visible-md">
-                        <div class="margin"></div>
-                        <small>&copy; 2015 - MyHomesMatchmaker</small>
-                    </div>
-                    <div class="col-md-6 visible-sm visible-xs">
-                        <div class="margin"></div>
-                        <small>&copy; 2015 - MyHomesMatchmaker</small>
-                    </div>
-                </div>
-            </div>
-        </nav>
 
 
   <script src='/javascripts/javascript.js'></script>
