--- a/views/searchResultsCS.ejs
+++ b/views/searchResultsCS.ejs
@@ -5,7 +5,7 @@
      <!-- SLICK SLIDER CSS -->
     <link rel='stylesheet' href='/stylesheets/slickSlider.css' />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
-    <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 
 
@@ -34,9 +34,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><% theUser.forEach(function(user){ if (user) { %><a href='/collegeStationFavs/<%= theUser[0]._id %>'>My Favorites</a><% } })%></li>
-        <li><a href="tel:5122709688">512-270-9688</a></li>
+        <li><a href="tel:9792197479">979-219-7479</a></li>
         <li><% cookies.forEach(function(cookie) { %>
-        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
+        <% if (!cookie) { %><a href="/signin">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -61,7 +61,7 @@
       <div><span class='listingOffice'>Listed by <%= listing.listOffice %></span></div><br>
      </div>
 
-    <div class="amenities"><% if (listing.stories === '1STORY') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 1 Stories</button><% } %><% if (listing.stories === '2andHalfSTORY' || listing.stories === '2STORYoMore') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 2 Stories</button><% } %><% if (listing.acreage === '' || listing.acreage === "0.00") { %><% } else { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.acreage %> Acres</button><% } %><% if (listing.garage > 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> <%= listing.garage %> Garage</button><% } %><% if (listing.garage == '3PLUS') { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> 3+ Garage</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.amenities.indexOf('ABVGRNPL') >= 0 || listing.amenities.indexOf('INGRNDPL') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('POOL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('CVRPTDE') >= 0) { %><button id="none" disabled="true"><img src="images/covered-patio.png" height="20px" width="20px"> Covered Patio</button><% } else { %><% } %><% if (listing.amenities.indexOf('SPRNKSYS') >= 0) { %><button id="none" disabled="true"><img src="images/sprinkler.png" height="20px" width="20px"> Sprinkler</button><% } else { %><% } %><% if (listing.amenities.indexOf('BRNSTBL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Barn/Stables</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('BACKPARK') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Backs to Park</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('CULDESAC') >= 0) { %><button id="none" disabled="true"><img src="images/cul-de-sac.png" height="20px" width="20px"> Cul-De-Sac</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('LAKE') >= 0) { %><button id="none" disabled="true"><img src="images/lake-icon.png" height="20px" width="20px"> Lake</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="School District: <%= listing.schoolDistrict %>">Schools</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="$/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaTerm %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Amber Dawn Cox" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'><strong>AGENT PHONE</strong></a> <br> <a href='mailto:Amber@MyHomesMatchmaker.com'>Amber@MyHomesMatchmaker.com</a> <br> Keller Williams Realty">Contact Agent</button></div></div>
+    <div class="amenities"><% if (listing.stories === '1STORY') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 1 Stories</button><% } %><% if (listing.stories === '2andHalfSTORY' || listing.stories === '2STORYoMore') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 2 Stories</button><% } %><% if (listing.acreage === '' || listing.acreage === "0.00") { %><% } else { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.acreage %> Acres</button><% } %><% if (listing.garage > 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> <%= listing.garage %> Garage</button><% } %><% if (listing.garage == '3PLUS') { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> 3+ Garage</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.amenities.indexOf('ABVGRNPL') >= 0 || listing.amenities.indexOf('INGRNDPL') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('POOL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('CVRPTDE') >= 0) { %><button id="none" disabled="true"><img src="images/covered-patio.png" height="20px" width="20px"> Covered Patio</button><% } else { %><% } %><% if (listing.amenities.indexOf('SPRNKSYS') >= 0) { %><button id="none" disabled="true"><img src="images/sprinkler.png" height="20px" width="20px"> Sprinkler</button><% } else { %><% } %><% if (listing.amenities.indexOf('BRNSTBL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Barn/Stables</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('BACKPARK') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Backs to Park</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('CULDESAC') >= 0) { %><button id="none" disabled="true"><img src="images/cul-de-sac.png" height="20px" width="20px"> Cul-De-Sac</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('LAKE') >= 0) { %><button id="none" disabled="true"><img src="images/lake-icon.png" height="20px" width="20px"> Lake</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="School District: <%= listing.schoolDistrict %>">Schools</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="$/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaTerm %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Amber Dawn Cox" data-content="[Agent Photo Here] <br> <a href='tel:9792197479'><strong>979-219-7479</strong></a> <br> <a href='mailto:Amber@MyHomesMatchmaker.com'>Amber@MyHomesMatchmaker.com</a> <br> Keller Williams Realty">Contact Agent</button></div></div>
 
 
 
@@ -72,20 +72,11 @@
 </div>
 </div>
 
-   <div class='row footerMargin'>
+  <div class='col-md-12 col-xs-12'>
+      <small>Listing information © 2015 Bryan-College Station Regional Multiple Listing Service. IDX information is provided exclusively for consumers' personal, non-commercial use and may not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing. Data is deemed reliable but is not guaranteed accurate</small>
     </div>
 
-   <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="margin visible-lg visible-md"></div>
-                        <small>Copyright © 2000-2015 Keller Williams ® Realty. - a real estate franchise company. All information provided is deemed reliable but is not guaranteed and should be independently verified. Properties subject to prior sale or rental. Each brokerage is independently owned and operated.</small>
-                    </div>
-                    
-                </div>
-            </div>
-        </nav>
+    
  <script src='/javascripts/javascript.js'></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
  <!-- SLICK SLIDER SCRIPT -->
