--- a/views/showChicago.ejs
+++ b/views/showChicago.ejs
@@ -6,7 +6,7 @@
     
     <link rel='stylesheet' href='/stylesheets/style2.css' />
     <link rel='stylesheet' href='/stylesheets/showPage.css' />
-      <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+      <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
@@ -32,9 +32,9 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="tel:5122709688">512-270-9688</a></li>
+        <li><a href="tel:7734250881">773-425-0881</a></li>
         <li><% cookies.forEach(function(cookie) { %>
-        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
+        <% if (!cookie) { %><a href="/signin">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -70,20 +70,20 @@
     </div>
      <div class='SHOW'>
     <div class='row'>
-        <div class='col-md-12'>
+        <div class='col-md-12 col-xs-12'>
         <h2 id='h2'>DESCRIPTION</h2>
         <div><%= theListing.remarks %></div>
         </div>
     </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>BASICS</h2>
           <div><strong><span class="price"><%= theListing.price %></span></strong></div>
           <div><%= ((new Date - new Date(theListing.listDate.trim())) / 86400000).toFixed(0) %> Days on Market</div>
           <div><%= theListing.beds %> Bed, <%= theListing.fullBaths %> Bath, <%= theListing.appxsqft %> Sq.Ft.</div>
           <div class='add'><%= theListing.streetNumber %> <%= theListing.streetName %> <% if (theListing.unitNum !== 'NA') { %>Unit <%= theListing.unitNum %><% } %> in <%= theListing.city %>, <%= theListing.state %></div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>MORE INFO</h2>
         <div>
           <!-- STORIES -->
@@ -93,19 +93,19 @@
     </div>
   </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SCHOOLS</h2>
         <div>Elem: <%= theListing.elemSchool %></div>
         <div>Middle: <%= theListing.middleSchool %></div>
         <div>High School: <%= theListing.highSchool %></div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>NEIGHBORHOOD</h2>
           <div><%= theListing.subdivision %></div>
       </div>
     </div>
     <div class='row'>
-        <div class='col-md-6'>
+        <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>FINANCIALS</h2>
         <div>Taxes: $<%= theListing.taxes %></div>
         <div>Price/SQFT: $<%= theListing.priceSQFT %></div>
@@ -113,11 +113,11 @@
         <div class='est'> </div>
         </div>
 
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SHOWING INFO</h2>
         <div>Walker Robinson</div>
          <!-- <div><img src='/images/walker-robinson-chicago.jpg' height='200px' width='200px' /></div> -->
-        <div><a href='tel:3094290826'>AGENT PHONE PLACEHOLDER</a></div>
+        <div><a href='tel:7734250881'>773-425-0881</a></div>
         <div><a href='mailto:Walker@MyHomesMatchmaker.com'>Walker@MyHomesMatchmaker.com</a></div>
         <div>RE/MAX Edge</div>
       </div>
@@ -140,10 +140,9 @@
         <div id="map"></div>
     </div>
     <div class='row'>
-      <small>Each Office Independently Owned and Operated. RE/MAX, LLC is an Equal Opportunity Employer and supports the Fair Housing Act.
-                        © 2015 RE/MAX, LLC. All Rights Reserved.</small>
+      <small>“The accuracy of all information, regardless of source, including but not limited to square footages and lot sizes, is deemed reliable but not guaranteed and should be personally verified through personal inspection by and/or with the appropriate professionals.”</small>
     </div>
-
+    <div class='chiIDX'><img src='/images/mred_logo.png'></div>
   
 
 
@@ -154,5 +153,17 @@
 <script src='/javascripts/javascript.js'></script>
 <script src='/javascripts/googleAPI.js'></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+  <div class="dialog" title="Create an Account">Login or create an account to save favorites! <a href='/signup' style='outline: 0; text-decoration: none; font-weight: bold'>Signup here!</a></div>
+               
+  <script>
+    $( ".dialog" ).dialog({ autoOpen: false });
+    $( ".FAVDISABLED" ).on('click', function() {
+    $( ".dialog" ).dialog( "open" );
+    });
+  </script>
   </body>
 </html>
