--- a/views/showCollegeStation.ejs
+++ b/views/showCollegeStation.ejs
@@ -6,7 +6,7 @@
     
     <link rel='stylesheet' href='/stylesheets/style2.css' />
     <link rel='stylesheet' href='/stylesheets/showPage.css' />
-      <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+      <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
@@ -32,9 +32,9 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="tel:5122709688">512-270-9688</a></li>
+        <li><a href="tel:9792197479">979-219-7479</a></li>
         <li><% cookies.forEach(function(cookie) { %>
-        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
+        <% if (!cookie) { %><a href="/signin">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -71,47 +71,47 @@
     </div>
     <div class='SHOW'>
     <div class='row'>
-        <div class='col-md-12'>
+        <div class='col-md-12 col-xs-12'>
         <h2 id='h2'>DESCRIPTION</h2>
         <div><%= theListing.remarks %></div>
         </div>
     </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>BASICS</h2>
           <div><strong><span class="price"><%= theListing.price %></span></strong></div>
           <div><%= ((new Date() - theListing.listContractDate) / 86400000).toFixed(0) %> Days on Market</div>
           <div><%= theListing.beds %> Bed, <%= theListing.baths %> Bath, <%= theListing.sqft.toFixed(0) %> Sq.Ft.</div>
           <div class='add'><%= theListing.streetNumber %> <%= theListing.streetName %> in <%= theListing.city %>, <%= theListing.state %></div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>MORE INFO</h2>
         <div><% if (theListing.stories === '1STORY') { %><button id='none' disabled='true'>1 Stories</button><% } %><% if (theListing.stories === '2andHalfSTORY' || theListing.stories === '2STORYoMore') { %><button id='none' disabled='true'>2 Stories</button><% } %><% if (theListing.acreage === '' || theListing.acreage === "0.00") { %><% } else { %><button id='none' disabled='true'><%= theListing.acreage %> Acres</button><% } %><% if (theListing.garage > 0) { %><button id='none' disabled='true'><%= theListing.garage %> Garage</button><% } %><% if (theListing.garage == '3PLUS') { %><button id='none' disabled='true'>3+ Garage</button><% } else { %><% } %><% if (theListing.fireplace > 0) { %><button id="none" disabled="true">Fireplace</button><% } else { %><% } %><% if (theListing.amenities.indexOf('ABVGRNPL') >= 0 || theListing.amenities.indexOf('INGRNDPL') >= 0) { %><button id="none" disabled="true">Pool</button><% } else { %><% } %><% if (theListing.amenities.indexOf('POOL') >= 0) { %><button id="none" disabled="true">Comm Pool</button><% } else { %><% } %><% if (theListing.amenities.indexOf('CVRPTDE') >= 0) { %><button id="none" disabled="true">Covered Patio</button><% } else { %><% } %><% if (theListing.amenities.indexOf('SPRNKSYS') >= 0) { %><button id="none" disabled="true">Sprinkler</button><% } else { %><% } %><% if (theListing.amenities.indexOf('BRNSTBL') >= 0) { %><button id="none" disabled="true">Barn/Stables</button><% } else { %><% } %><% if (theListing.lotDesc.indexOf('BACKPARK') >= 0) { %><button id="none" disabled="true">Backs to Park</button><% } else { %><% } %><% if (theListing.lotDesc.indexOf('CULDESAC') >= 0) { %><button id="none" disabled="true">Cul-De-Sac</button><% } else { %><% } %><% if (theListing.lotDesc.indexOf('LAKE') >= 0) { %><button id="none" disabled="true">Lake</button><% } else { %><% } %><button id="none" disabled="true">Built <%= theListing.yearBuilt %></button></div>
     </div>
   </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SCHOOLS</h2>
         <div><%= theListing.schoolDistrict %> ISD</div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>NEIGHBORHOOD</h2>
           <div><%= theListing.subdivision %></div>
       </div>
     </div>
     <div class='row'>
-        <div class='col-md-6'>
+        <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>FINANCIALS</h2>
         <div>Price/SQFT: $<%= theListing.priceSQFT %></div>
         <div>HOA: $<%= theListing.hoaFee %> <%= theListing.hoaTerm %></div>
         <div class='est'> </div>
         </div>
 
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SHOWING INFO</h2>
         <div>Amber Dawn Cox</div>
-        <!-- <div>AGENT PHOTO PLACEHOLDER</div> -->
-        <div><a href='tel:3094290826'>AGENT PHONE PLACEHOLDER</a></div>
+          <!-- <div><img src='/images/nathan-nashville-kw.jpg' height='200px' width='200px' /></div> -->
+        <div><a href='tel:9792197479'>979-219-7479</a></div>
         <div><a href='mailto:Amber@MyHomesMatchmaker.com'>Amber@MyHomesMatchmaker.com</a></div>
         <div>Keller Williams Realty</div>
       </div>
@@ -141,21 +141,25 @@
   </div>
    </div>
 
-      <div class='row footerMargin'>
+    <div class='col-md-12'>
+      <small>Listing information © 2015 Bryan-College Station Regional Multiple Listing Service. IDX information is provided exclusively for consumers' personal, non-commercial use and may not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing. Data is deemed reliable but is not guaranteed accurate</small>
     </div>
-   <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="margin visible-lg visible-md"></div>
-                        <small>Copyright © 2000-2015 Keller Williams ® Realty. - a real estate franchise company. All information provided is deemed reliable but is not guaranteed and should be independently verified. Properties subject to prior sale or rental. Each brokerage is independently owned and operated.</small>
-                    </div>
-                    
-                </div>
-            </div>
-        </nav>
+
+    
 <script src='/javascripts/javascript.js'></script> 
 <script src='/javascripts/googleAPI.js'></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+  <div class="dialog" title="Create an Account">Login or create an account to save favorites! <a href='/signup' style='outline: 0; text-decoration: none; font-weight: bold'>Signup here!</a></div>
+               
+  <script>
+    $( ".dialog" ).dialog({ autoOpen: false });
+    $( ".FAVDISABLED" ).on('click', function() {
+    $( ".dialog" ).dialog( "open" );
+    });
+  </script>
   </body>
 </html>
