--- a/views/showOrlando.ejs
+++ b/views/showOrlando.ejs
@@ -6,7 +6,7 @@
 
     <link rel='stylesheet' href='/stylesheets/style2.css' />
     <link rel='stylesheet' href='/stylesheets/showPage.css' />
-      <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+      <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
@@ -32,9 +32,9 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="tel:5122709688">512-270-9688</a></li>
+        <li><a href="tel:3212319843">321-231-9843</a></li>
         <li><% cookies.forEach(function(cookie) { %>
-        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
+        <% if (!cookie) { %><a href="/signin">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -71,38 +71,38 @@
     </div>
      <div class='SHOW'>
     <div class='row'>
-        <div class='col-md-12'>
+        <div class='col-md-12 col-xs-12'>
         <h2 id='h2'>DESCRIPTION</h2>
         <div><%= theListing.remarks %></div>
         </div>
     </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>BASICS</h2>
           <div><strong><span class="price"><%= theListing.price %></span></strong></div>
           <div><%= theListing.beds %> Bed, <%= theListing.baths %> Bath, <%= theListing.sqft %> Sq.Ft.</div>
           <div class='add'><%= theListing.address %> in <%= theListing.city %>, <%= theListing.state %></div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>MORE INFO</h2>
         <div><% if (theListing.propType ==='CondoHotel' || theListing.propType === 'Condo') { %><button id='none' disabled='true'>Floor #<%= theListing.stories %></button><% } else { %><button id='none' disabled='true'><%= theListing.stories %> Stories</button><% } %><% if (theListing.garage.indexOf('1CarGarage') >= 0) { %><button id='none' disabled='true'>1 Garage</button><% } %><% if (theListing.garage.indexOf('2CarGarage') >= 0) { %><button id='none' disabled='true'>2 Garage</button><% } %><% if (theListing.garage.indexOf('3CarGarage') >= 0) { %><button id='none' disabled='true'>3 Garage</button><% } %><% if (theListing.garage.indexOf('4CarGarage') >= 0) { %><button id='none' disabled='true'>4 Garage</button><% } %><% if (theListing.garage.indexOf('5PlusCarGarage') >= 0) { %><button id='none' disabled='true'>5+ Garage</button><% } %><% if (theListing.garage.indexOf('1CarCarport') >= 0) { %><button id='none' disabled='true'>1 Carport</button><% } %><% if (theListing.garage.indexOf('2CarCarport') >= 0) { %><button id='none' disabled='true'>2 Carport</button><% } %><% if (theListing.garage.indexOf('3CarCarport') >= 0) { %><button id='none' disabled='true'>3 Carport</button><% } %><% if (theListing.pool.indexOf('Private') >= 0) { %><button id="none" disabled="true">Pool</button><% } %><% if (theListing.lotSize != '0.00') { %><button id='none' disabled='true'><%= theListing.lotSize %> Acres</button><% } else { %><% } %><% if (theListing.fireplace > 0) { %><button id="none" disabled="true">Fireplace</button><% } %><% if (theListing.waterfront > 0) { %><button id="none" disabled="true">Waterfront</button><% } %><% if (theListing.amenities.indexOf('GolfComm') >= 0) { %><button id="none" disabled="true">Golf Comm</button><% } %><% if (theListing.pool.indexOf('Community') >= 0) { %><button id="none" disabled="true">Comm Pool</button><% } %><% if (theListing.amenities.indexOf('GatedComm') >= 0) { %><button id="none" disabled="true">Gated Comm</button><% } %><button id="none" disabled="true">Built <%= theListing.yearBuilt %></button></div>
     </div>
   </div>
     <div class='row'>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SCHOOLS</h2>
         <div><%= theListing.schoolDistrict %></div>
         <div>Elem: <%= theListing.elemSchool %></div>
         <div>Middle: <%= theListing.middleSchool %></div>
         <div>High School: <%= theListing.highSchool %></div>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
           <h2 id='h2'>NEIGHBORHOOD</h2>
           <div><%= theListing.subdivision %></div>
       </div>
     </div>
     <div class='row'>
-        <div class='col-md-6'>
+        <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>FINANCIALS</h2>
         <div>Taxes: $<%= theListing.taxes %></div>
         <div>Price/SQFT: <% if (theListing.priceSQFT === 'Infinity') { %>NA<% } else { %>$<%= theListing.priceSQFT %><% } %></div>
@@ -110,11 +110,11 @@
         <div class='est'> </div>
         </div>
 
-      <div class='col-md-6'>
+      <div class='col-md-6 col-xs-12'>
         <h2 id='h2'>SHOWING INFO</h2>
         <div>Wael Georgey</div>
 <!--          <div><img src='/images/wael-georgey-orlando.jpg' height='200px' width='200px' /></div> -->
-        <div><a href='tel:3094290826'>AGENT PHONE PLACEHOLDER</a></div>
+        <div><a href='tel:3212319843'>321-231-9843</a></div>
         <div><a href='mailto:Wael@MyHomesMatchmaker.com'>Wael@MyHomesMatchmaker.com</a></div>
         <div>Properties In Town</div>
       </div>
@@ -143,22 +143,25 @@
   </div>
    </div>
 
-      <div class='row footerMargin'>
-    </div>
+   <div class='col-md-12'>
+  <small>This data is updated daily. Some properties appearing for sale on this web site may subsequently have sold and may no longer be available. The data relating to real estate for sale on this web site comes in part from the IDX program of My Florida Regional Multiple Listing Service, Inc., Copyright 2015. Real estate listings held by brokerage firms other than Properties in Town are marked with the Broker Reciprocity logo, IDX. All information contained herein is deemed reliable but not guaranteed. The information provided is for consumer, non-commercial use only and my not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing.</small>
+</div>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="margin visible-lg visible-md"></div>
-                        <p style='font-size: 10px'>This data is updated daily. Some properties appearing for sale on this web site may subsequently have sold and may no longer be available. The data relating to real estate for sale on this web site comes in part from the IDX program of My Florida Regional Multiple Listing Service, Inc., Copyright 2015. Real estate listings held by brokerage firms other than Properties in Town are marked with the Broker Reciprocity logo, IDX. All information contained herein is deemed reliable but not guaranteed. The information provided is for consumer, non-commercial use only and my not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing.</small>
-                    </div>
-                    
-                </div>
-            </div>
-        </nav>
+
 <script src='/javascripts/javascript.js'></script>
 <script src='/javascripts/googleAPI.js'></script> 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+  <div class="dialog" title="Create an Account">Login or create an account to save favorites! <a href='/signup' style='outline: 0; text-decoration: none; font-weight: bold'>Signup here!</a></div>
+               
+  <script>
+    $( ".dialog" ).dialog({ autoOpen: false });
+    $( ".FAVDISABLED" ).on('click', function() {
+    $( ".dialog" ).dialog( "open" );
+    });
+  </script>
   </body>
 </html>
