--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" / >
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
   </head>
   <body>
     <div class='signin'></div>
@@ -30,8 +30,8 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="tel:5122709688">512-270-9688</a></li>
-        <li><a href="/signup">Login/Register</a></li>
+        <!-- <li><a href="tel:5122709688">512-270-9688</a></li> -->
+        <li><a href="/signin">Login/Register</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -46,8 +46,14 @@
         <label for"password" class='form-group'>Password</label>
          <input type='text' id='password' name='password' class='form-control btn-info'>
         <p class='form-group'></p>
-        <input type='submit' value="Submit">
+        <input type='submit' value="Submit">&nbsp;<button><a href='/signup'>Create an Account</a></button>
       </form>
+
+           <div class='col-md-12'>
+      <% errors.forEach(function(error) { %>
+          <p style='color: red' class='errors'><%= error %></p>
+     <% }) %>
+    </div>
 
     </div>
     <div class='col-md-6 col-md-offset-3'>
