--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" / >
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
   </head>
   <body>
      <div class='signin'></div>
@@ -29,8 +29,8 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="tel:5122709688">512-270-9688</a></li>
-        <li><a href="/signup">Login/Register</a></li>
+        <!-- <li><a href="tel:5122709688">512-270-9688</a></li> -->
+        <li><a href="/signin">Login/Register</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -46,7 +46,7 @@
         <label for'confirmPassword' class='form-group'>Confirm Password</label>
         <input type='text' id='confirmPassword' name='confirmPassword' class='form-control btn-info'>
         <p class='form-group'></p>
-        <div><input type='submit' value="Submit">&nbsp; <a href='/signin'>Already registered?</a></div>
+        <div><input type='submit' value="Submit">&nbsp;</div>
       </form>
  <!--        <a href='auth/facebook'><p>Login with Facebook</p></a>
           <a href="/auth/google"><p>Sign In with Google</p></a> -->
